some commons dependencies removed